		Return true to cancel vanilla behavior.
	- MC_POST_TRIGGER_BED_SLEEP_EFFECT(Player, Bed)
	- MC_PRE_BED_SLEEP(Player, Bed)
		Triggers on bed collision and before playing sleep sequence.
		Return true to cancel vanilla behavior.
* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
/newline/
Modified:
* EntityPlayer:
	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
* ImGui:
	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
Fixes:
* ImGui:
	- Fixed RemoveElement not working on elements created with AddInputColor.
/newline/
/versionseparator/
v1.0.12.a -
* The changelogs menu has been revamped. Use the left and right arrow keys to look between versions.
Additions:
* Ambush:
	- [Get/Set]MaxBossChallengeWaves()
	- Allows changing the number of waves in a boss challenge room
Fixes:
* Boss challenge rooms wave count no longer accidentally tied to normal challenge room wave count (ie, now two instead of three)
/versionseparator/
v1.0.12 -
Additions:
* Add new Vanilla Tweaks option "Console Autofill Limit", which determines the number of autocomplete items that are displayed in the debug console.
* Level:
	- CanPlaceRoom(RoomConfigRoom, int GridIndex, int Dimension = -1, bool AllowMultipleDoors = true, bool AllowSpecialNeighbors = false, bool AllowNoNeighbors = false)
		Returns true if the room would be able to fit at this location.
	- TryPlaceRoom(RoomConfigRoom, int GridIndex, int Dimension = -1, int Seed = 0, bool AllowMultipleDoors = true, bool AllowSpecialNeighbors = false, bool AllowNoNeighbors = false)
		Will only place the room if it can fit and all doors can be successfully connected to neighboring rooms.
		If successful, returns the new RoomDescriptor, returns nil otherwise.